# finally-learning-some-opengl

./: .gitignore  CMakeLists.txt  TODO.md
include/: App.h  Camera2D.h  Camera3D.h  Definitions.h  Filesystem.h  GL.h  Kbd.h  Mesh.h  Scene.h  Shader.h  Texture.h  Vertex.h  World.h
shaders/: fragment.glsl  vertex.glsl
src/: App.cpp  Camera2D.cpp  Camera3D.cpp  Filesystem.cpp  Kbd.cpp  Main.cpp  Mesh.cpp  Scene.cpp  Shader.cpp  Texture.cpp
